welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:8: error: too many arguments for method droite: ()Unit
				{droite(2);avance()}
                                       ^BDR2:25: error: not found: value liMessage
											else { if (liMessage() == "F")
                                                                                                   ^